добавлен сервис статистики и теперь еще и клиент и прочее